--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,7 @@ __pycache__
 pages/__pycache__
 tests/__pycache__
 pysocks.egg-info
+pysocks.egg-info/dependency_link.txt
+pysocks.egg-info/PKG-INFO
+pysocks.egg-info/SOURCES.txt
+pysocks.egg-info/top_level.txt
