--- a/.gitignore
+++ b/.gitignore
@@ -4,8 +4,4 @@ __pycache__
 .gitattributes
 pages/__pycache__
 tests/__pycache__
-pysocks.egg-info
-pysocks.egg-info/dependency_link.txt
-pysocks.egg-info/PKG-INFO
-pysocks.egg-info/SOURCES.txt
-pysocks.egg-info/top_level.txt
+pysocks.egg-info/
